@@ -1,3 +1,8 @@
+2007-09-16  Andre Klapper  <a9016009@gmx.de>
+
+	* system-tile.c: revert to svn revision 339 (=before
+	GNOME string freeze break).
+
 2007-02-12  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* application-tile.c (application_tile_setup): check strings before
